# stm32_bare_metal_starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  arm-none-eabi.cmake  linker.ld  main.c  startup.c
cmake/: arm-none-eabi.cmake  mcu-type.cmake
cmake/mcu/: stm32f407.cmake  stm32h723.cmake
include/: system_clock.h
src/: clock_config_stm32h723.c  led.h  led_f407.c  led_h723.c  main.c
